--- a/src/Pages/PlansPage/plansPage.module.scss
+++ b/src/Pages/PlansPage/plansPage.module.scss
@@ -1,122 +1,95 @@
 @import '../../styles/_variables.scss';
 
-.plansForm {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 70px;
-    
-    section {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 30px;
-        max-height: 296px;
 
-        .containerPlan {
+.containerPlan {
 
-            label {
-                
-                .checkboxInner {
-                    display: flex;
-                    position: relative;
-                    flex-direction: column;
-                    width: 155px;
-                    height: 175px;
-                    border: 1px solid $white;
-                    box-sizing: border-box;
-                    border-radius: 10px;
-                    padding: 15px;
-                    cursor: pointer;
-                }
+    label {
 
-                img {
-                    margin-bottom: 45px;
-                    order: 1;
-                    cursor: pointer;
-                    width: 50px;
-                    height: 50px;
-                }
+        .checkboxInner {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            width: 155px;
+            min-height: 84px;
+            position: relative;
+            border: 1px solid $white;
+            box-sizing: border-box;
+            border-radius: 10px;
+            padding: 15px;
+            cursor: pointer;
 
-                .title {
-                    font-size: 18px;
-                    font-family: $font-medium;
-                    color: $dark-blue;
-                    margin-bottom: 10px;
-                    order: 2;
-                }
+            img {
+                margin-bottom: 30px;
+                order: 1;
+                cursor: pointer;
+                width: 50px;
+                height: 50px;
+            }
 
-                p {
-                    font-family: $font-regular;
-                    color: $grey;
-                    order: 3;
-                }
+            .title {
+                order: 2;
+                font-size: 18px;
+                font-family: $font-medium;
+                color: $dark-blue;
+            }
 
-                input[type='checkbox'] {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    z-index: 1;
-                    opacity: 0;
+        }
 
-                    &:hover+.checkboxInner {
-                        border: 1px solid $dark-blue;
-                    }
+        input[type=radio] {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 1;
+            opacity: 0;
 
-                    &:checked+.checkboxInner {
-                        background-color: #F8F9FE;
-                        border: 1px solid $dark-blue;
-                    }
-                }
+            &:hover+.checkboxInner {
+                border: 1px solid $dark-blue;
+            }
+
+            &:checked+.checkboxInner {
+                background-color: #F8F9FE;
+                border: 1px solid $dark-blue;
             }
         }
+
     }
 
-    .selectorValue {
-        display: flex;
-        flex-basis: 100%;
-        align-items: center;
-        justify-content: center;
-        padding: 5px 0px;
-        background-color: #F8F9FE;
-
-        p {
-            font-family: $font-medium;
-            font-size: 16px;
-            color: $dark-blue;
-        }
-    }
-
+    
 }
 
-.twoButtons {
+.selectorValue {
+    margin: 42px 0px;
     display: flex;
-    justify-content: space-between;
     flex-basis: 100%;
-    max-height: 51px;
-    align-self: end;
-    button[type=submit] {
+    align-items: center;
+    justify-content: center;
+    padding: 5px 0px;
+    background-color: #F8F9FE;
+
+    p {
         font-family: $font-medium;
-        cursor: pointer;
-        font-size: 18px;
-        padding: 15px 25px;
-        border-radius: 10px;
-        background-color: $dark-blue;
-        color: $white;
-        border: none;
+        font-size: 16px;
+        color: $dark-blue;
     }
+}
 
-    button[type=button] {
-        font-family: $font-medium;
-        cursor: pointer;
-        font-size: 18px;
-        border: none;
-        background-color: white;
-        color: $grey;
-
-        &:hover {
-            color: $dark-blue;
+@media (max-width: 375px) {
+    .containerPlan {
+        label {
+            .checkboxInner {
+                flex-direction: row;
+                width: 300px;
+                img {
+                    margin-bottom: 0px;
+                }
+            }
+            .checkboxInner:nth-child(2) {
+                margin: 15px 0px;
+            }
+            
         }
+    }
+    .selectorValue {
+        margin: 0px;
     }
 }
