--- a/src/Pages/SummaryPage/summaryPage.module.scss
+++ b/src/Pages/SummaryPage/summaryPage.module.scss
@@ -1,24 +1,23 @@
 @import '../../styles/_variables.scss';
 
 .summaryPage {
-    width: 586px;
-    height: 390px;
     display: flex;
     flex-wrap: wrap;
+    flex-basis: calc(940px - 274px);
 
     .containerItens {
-        padding: 24px;
+        margin: 50px;
         background-color: #F8F9FE;
         flex-basis: 100%;
 
         .contentSidebar {
             display: grid;
-            padding-top: 25px;
+            margin: 25px;
             grid-template-columns: 1fr 1fr;
             align-items: center;
             color: #67758D;
             font-family: $font-regular;
-
+            
             *:nth-child(2) {
                 text-align: end;
                 grid-row: span 2;
@@ -41,18 +40,21 @@
             a {
                 text-decoration: underline;
                 font-family: $font-regular;
+                color: $grey;
             }
             
         }
+
         div:nth-child(1) {
-            padding: 0 0px 17px 0px;
+            padding-bottom: 25px;
             border-bottom: 1px solid #E8E8FC;
         }
     }
+
     .containerResult {
         display: flex;
         justify-content: space-between;
-        padding: 24px;
+        margin: 0px 75px;
         flex-basis: 100%;
         color: #67758D;
         font-family: $font-regular;
@@ -63,21 +65,22 @@
             color: #4D46D2;
         }
     }
-    
+
     div:nth-child(3) {
+        margin: 0px 75px;
+        flex-basis: 100%;
         max-height: 51px;
-        align-self: end;
+        flex-basis: 100%;
         display: flex;
         justify-content: space-between;
-        flex-basis: 100%;
-
+        
         button[type=submit] {
             font-family: $font-medium;
             cursor: pointer;
             font-size: 18px;
             padding: 15px 25px;
             border-radius: 10px;
-            background-color: #493EFE;
+            background-color: $dark-blue;
             color: $white;
             border: none;
         }
@@ -89,6 +92,7 @@
             border: none;
             background-color: white;
             color: $grey;
+            padding: 0px;
 
             &:hover {
                 color: $dark-blue;
