--- a/src/Components/Nav/nav.module.scss
+++ b/src/Components/Nav/nav.module.scss
@@ -29,7 +29,7 @@
                     margin-bottom: 5px;
                 }
                 :first-child {
-                    color: $grey;
+                    color: $cool-grey;
                     font-size: 14px;
                 }
                 :last-child {
