--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,11 @@ $font-regular: "UbuntuRegular";
 $font-bold: "UbuntuBold";
 $font-medium: "UbuntuMedium";
 // Colors
-$dark-blue: #001642;
-$light-blue: #7E7CF8;
-$grey: #9D9DA7;
-$white: #E8E8FC;
+$marine-blue: hsl(213, 96%, 18%);
+$purplish-blue: hsl(243, 100%, 62%);
+$light-blue: hsl(228, 100%, 84%);
+$light-grey: hsl(229, 24%, 87%);
+$cool-grey: hsl(231, 11%, 63%);
+$magnolia: hsl(217, 100%, 97%);
+$alabaster: hsl(231, 100%, 99%);
+$white: hsl(0, 0%, 100%);
