--- a/src/Pages/PlansPage/plansPage.module.scss
+++ b/src/Pages/PlansPage/plansPage.module.scss
@@ -12,7 +12,6 @@
         label {
             display: grid;
             width: 155px;
-            min-height: 84px;
             border: 1px solid $light-grey;
             box-sizing: border-box;
             border-radius: 10px;
@@ -24,12 +23,14 @@
                 cursor: pointer;
                 width: 50px;
                 height: 50px;
+                grid-row: 1;
             }
 
             :nth-child(2) {
                 font-size: 18px;
                 font-family: $font-medium;
                 color: $marine-blue;
+                grid-row: 2;
             }
 
             :nth-child(3) {
@@ -37,12 +38,14 @@
                 font-size: 16px;
                 font-family: $font-regular;
                 margin: 10px 0px;
+                grid-row: 3;
             }
 
             :nth-child(4) {
                 color: $marine-blue;
                 font-size: 14px;
                 font-family: $font-regular;
+                grid-row: 4;
             }
 
             &:hover {
@@ -88,12 +91,28 @@
 
                 display: grid;
                 grid-template-columns: 0fr 1fr;
-                width: 300px;
+                width: 100%;
                 column-gap: 30px;
 
                 img {
+                    grid-column: 1;
                     grid-row: span 3;
                     margin-bottom: 0px;
+                }
+
+                :nth-child(2) {
+                    grid-column: 2;
+                    grid-row: 2;
+                }
+    
+                :nth-child(3) {
+                    grid-column: 2;
+                    grid-row: 3;
+                }
+    
+                :nth-child(4) {
+                    grid-column: 2;
+                    grid-row: 4;
                 }
 
             }
