--- a/src/Pages/SummaryPage/summaryPage.module.scss
+++ b/src/Pages/SummaryPage/summaryPage.module.scss
@@ -1,10 +1,6 @@
 @import '../../styles/_variables.scss';
 
 
-.summaryContainer {
-    flex-basis: calc(940px - 274px);
-    display: flex;
-    flex-wrap: wrap;
 
     .summaryPage {
         flex-basis: 80%;
@@ -105,9 +101,10 @@
         margin: 0px auto;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         align-self: end;
 
-        button[type=submit] {
+        .confirmButton {
             font-family: $font-medium;
             cursor: pointer;
             font-size: 18px;
@@ -119,10 +116,11 @@
 
             &:hover {
                 background-color: $light-blue;
+                color: $white;
             }
         }
 
-        button[type=button] {
+        a {
             font-family: $font-medium;
             cursor: pointer;
             font-size: 18px;
@@ -130,17 +128,17 @@
             background-color: white;
             color: $cool-grey;
             padding: 0px;
+            text-decoration: none;
+
 
             &:hover {
                 color: $marine-blue;
             }
         }
     }
-}
+
 
 @media (max-width: 375px) {
-    .summaryContainer {
-        height: 80vh;
         .summaryPage {
             background-color: #FFFFFF;
             border-radius: 24px;
@@ -153,5 +151,4 @@
             padding: 0px 17.5px;
             margin: 0px;
         }
-    }
 }
